[gd_scene load_steps=2 format=3 uid="uid://dkwexgv4hb5fy"]

[ext_resource type="Script" path="res://scenes/tests/TestDragons.gd" id="1_test"]

[node name="TestDragons" type="Node2D"]
script = ExtResource("1_test")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.15, 0.2, 0.15, 1)

[node name="EntitiesContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Dragon Ranch Test Scene
Loading..."
vertical_alignment = 1

[node name="InstructionsLabel" type="Label" parent="UI"]
offset_left = 500.0
offset_top = 10.0
offset_right = 790.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(1, 1, 0.7, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Instructions loading..."
